--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+    
+      <dependency>
+        <groupId>foundation.icon</groupId>
+        <artifactId>javaee-scorex</artifactId>
+        <version>0.5.4.1</version>
+      </dependency>
     </dependencies>
 
     <build>
